--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "User API web application",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/app.js",
     "test": "./node_modules/.bin/mocha test/*.js"
   },
-  "author": "Sergei Kudinov",
+  "author": "Hugo Navillod",
   "license": "",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "method-override": "^3.0.0",
     "mixme": "^0.3.5",
     "redis": "^3.0.2"
   },
