--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "User API web application",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "node src/index.js",
     "test": "./node_modules/.bin/mocha test/*.js"
   },
   "author": "Hugo Navillod",
