--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "User API web application",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "test": "./node_modules/.bin/mocha test/*.js"
+    "start": "nodemon src/app.js",
+    "test": "./node_modules/.bin/mocha --exit test/*.js"
   },
   "author": "Hugo Navillod",
   "license": "",
@@ -14,7 +14,9 @@
     "express-handlebars": "^5.2.0",
     "method-override": "^3.0.0",
     "mixme": "^0.3.5",
-    "redis": "^3.0.2"
+    "nodemon": "^2.0.6",
+    "redis": "^3.0.2",
+    "supertest": "^6.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
