--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3'
 services:
   redis-server: 
-    image: 'redis'
+    image: redis
   node-app:
     build: .
     ports:
       - "4001:3000"
+    restart: always
