--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,7 @@ services:
   node-app:
     build: .
     ports:
-      - "4001:3000"
+      - "3000:3000"
     restart: always
+    environment: 
+      - IAMDOCKER=1
