--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Hugo Navillod",
   "license": "",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "method-override": "^3.0.0",
